# installing-libraries-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/examples/: vector.c
lib/include/: vector.h
lib/src/: vector.c
lib/tests/: vector.c
